--- a/day07/index.html
+++ b/day07/index.html
@@ -20,5 +20,19 @@
       <div class="item"></div>
       <div class="item item-four"></div>
     </div>
+
+    <div class="media-demo">
+      <div class="para">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente
+        voluptatibus voluptatem culpa velit enim. Amet incidunt minima optio
+        architecto alias distinctio quaerat voluptates possimus neque.
+      </div>
+
+      <div class="para">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente
+        voluptatibus voluptatem culpa velit enim. Amet incidunt minima optio
+        architecto alias distinctio quaerat voluptates possimus neque.
+      </div>
+    </div>
   </body>
 </html>
