--- a/month_03/day_02/index.html
+++ b/month_03/day_02/index.html
@@ -5,19 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Learning JS</title>
-
-    <style>
-      h1 {
-        color: #ff7f50;
-      }
-    </style>
   </head>
   <body>
-    <h1>People entered <span id="ppl-count">0</span></h1>
+    <h1>People count: <span id="ppl-count"></span></h1>
 
     <!-- Script -->
-    <script>
-      document.getElementById("ppl-count").innerText = 5;
-    </script>
+    <script src="index.js"></script>
   </body>
 </html>
