--- a/month_03/passenger_counter/index.html
+++ b/month_03/passenger_counter/index.html
@@ -14,6 +14,7 @@
     <p>People Entered: <span id="count-el">0</span></p>
     <button id="increment-btn" onclick="increment()">Increment Btn</button>
     <button id="save-btn" onclick="save()">Save Btn</button>
+    <p id="save-el">Previous entries:</p>
 
     <script src="script.js"></script>
   </body>
