finished pracrice challenges from scrimba

--- a/month_03/practice01/index.html
+++ b/month_03/practice01/index.html
@@ -8,6 +8,19 @@
   </head>
   <body>
     <p id="fullname-el"></p>
+
+    <button onclick="purchase()">Purchase</button>
+    <p id="error-el"></p>
+
+    <span id="num1-el"></span>
+    <span id="num2-el"></span>
+    <br />
+    <button onclick="add()">Add</button>
+    <button onclick="subtract()">Subtract</button>
+    <button onclick="multiply()">Multiply</button>
+    <button onclick="divide()">Divide</button>
+    <br />
+    <span id="result-el"></span>
     <script src="script.js"></script>
   </body>
 </html>
