--- a/month_03/blackjack/index.html
+++ b/month_03/blackjack/index.html
@@ -5,8 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Blackjack</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <h1>Blackjack</h1>
+    <p id="message-el">Want to play a round?</p>
+    <p>Cards:</p>
+    <p>Sum:</p>
     <script src="script.js"></script>
   </body>
 </html>
