--- a/month_03/blackjack/index.html
+++ b/month_03/blackjack/index.html
@@ -13,6 +13,8 @@
     <p id="cards-el">Cards:</p>
     <p id="sum-el">Sum:</p>
     <button onclick="startGame()">Start Game</button>
+    <br />
+    <button onclick="newCard()">New Card</button>
     <script src="script.js"></script>
   </body>
 </html>
