--- a/month_03/blackjack/index.html
+++ b/month_03/blackjack/index.html
@@ -15,6 +15,8 @@
     <button onclick="startGame()">Start Game</button>
     <br />
     <button onclick="newCard()">New Card</button>
+    <br />
+    <p id="player-el"></p>
     <script src="script.js"></script>
   </body>
 </html>
